--- a/jade/interview-list.jade
+++ b/jade/interview-list.jade
@@ -20,17 +20,18 @@ html.no-js
 		<meta name="apple-mobile-web-app-title" content="POW! WOW!">
 		<meta name="application-name" content="POW! WOW!">
 		<meta name="theme-color" content="#ffffff">
-		script(src="https://maps.google.com/maps/api/js?sensor=false&libraries=geometry&v=3.22&key=AIzaSyC_kLitJTrG9CrohPBaoPDu15qjBu7F1Lg")
 		script(src='https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js')
 		script(src='js/foundation.js')
 		script(src='https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js')
 		script(src='js/classie.js')
 		script(src='js/selectFx.js')
 		script(src="http://cdnjs.cloudflare.com/ajax/libs/modernizr/2.0.6/modernizr.min.js")
-		script(src='js/jquery.grid-a-licious.js')
+		script(src='js/materialize.js')
+		script(src='https://cdn.jsdelivr.net/scrollreveal.js/3.3.1/scrollreveal.min.js')
 		link(rel='stylesheet', href='font/aller.css')
+		link(rel='stylesheet', href='css/flexslider.css')
 		link(rel='stylesheet', href='css/foundation.css')
-		link(rel='stylesheet', href='css/font-awesome.css')
+		link(rel='stylesheet', href='css/materialize.css')
 		link(rel='stylesheet', href='css/styles.css')
 		link(href='https://fonts.googleapis.com/css?family=Ubuntu:400,700,300', rel='stylesheet', type='text/css')
 		script.
@@ -40,7 +41,6 @@ html.no-js
 					scrollTop: $("#"+id).offset().top - 50},
 				'slow');
 			}
-
 			function redirectPage() {
 				window.location = linkLocation;
 			}
@@ -57,9 +57,9 @@ html.no-js
 			        linkLocation = this.href;
 			        $("body").fadeOut(1000, redirectPage);      
 			    });
-			         
-			    
+
 				$(document).foundation();
+				
 				$('.lines-button').click(function(e) {
 					e.preventDefault();
 					$('.lines-button').toggleClass('close');
@@ -91,8 +91,6 @@ html.no-js
 					$("html, body").animate({ scrollTop: 0 }, 500);
 					return false;
 				});
-
-
 				$('.ripple').on('click', function (event) {
 					var $div = $('<div/>'),
 					btnOffset = $(this).offset(),
@@ -120,14 +118,33 @@ html.no-js
 						});
 					}, 500);
 				});
-				$('.gallery').gridalicious({
-					selector: '.artist-gallery',
-					width: 400
+				$('.index-block').each(function(){
+					$(this).find('.index-artist-block').last().addClass('end');
+				});
+				$('.pin').hover(function(){
+					$('.pin').not(this).css('opacity', '0.4');
+				}, function(){
+					$('.pin').not(this).css('opacity', '1');
 				});
 				
+				
+				$("#contentlink").click(function(e) { 
+					e.preventDefault(); 
+					goToByScroll($(this).attr("id"));           
+				});
+				$('.parallax').parallax();
 				[].slice.call( document.querySelectorAll( 'select.cs-select' ) ).forEach( function(el){	
 					new SelectFx(el);
-				});  
+				});    
+				var config = {
+					viewFactor: 0.15,
+					duration: 800,
+					distance: '0px',
+					scale: 0.8
+				}
+				window.sr = ScrollReveal(config);
+				sr.reveal('.revealer'); 
+				
 				
 			});
 	body
@@ -138,26 +155,29 @@ html.no-js
 				.bounce3
 		.wrapper
 			include component/header.jade
-			.content.padding-column.p-bottom-50
-				#particles-js
-				.banner-slogan
-					p.page-slogan.artist-slogan Location
-				.google-maps
-					<iframe src="https://www.google.com/maps/d/u/0/embed?mid=19s8FCjqTaJEw3mL0B5paTyTV8GU" width="640" height="480"></iframe>
-				.gallery-wrap
-					p.index-title.small-title Murals
-					.gallery
-						- var item = ['colasa-painting']
-							- for (var i=0; i<10; i++)
-								.artist-gallery.revealer
-									a.borderless(href="img/"+ item + i + ".jpg", data-lightbox="lightbox"): img(src="img/" + item + i + ".jpg")
-									.card-bg-fix
-					.clearfix
+			.content
+				.parallax-container
+					.parallax
+						img(src='img/banner1.jpg')
+					.banner-slogan
+						p.page-slogan interview
+						p.page-sub-slogan hear what these artists have to say
+						.banner-button.arrow-down: a#contentlink(href="#") SEE INTERVIEWS
+				a#content(href="#")
+				.index-block.index-mural.padding-top-120.padding-column
+					.artists-content-block
+						.row
+							- var list = [{ name : "alexface", data : "graffiti artist" },{ name : "caratoes", data : "graffiti artist" },{ name : "colasa", data : "music artist"},{ name : "debe", data : "music artist"},{ name : "girenhao", data : "graffiti artist"}, { name : "horton", data : "graffiti artist"},{ name : "nychos", data : "graffiti artist"}]
+								each item in list
+									.medium-4.small-12.columns.index-artist-block.revealer.safari_only
+										a.linkFade(href="artist.html")
+											.ratio-hack
+												div.i-artist-thumb(style="background-image: url(img/"+item.name+"_thumb.jpg);")
+													.i-artist-overlay
+													.artist-name-cat
+														p=item.name
+														p.underline
+														p=item.data
+						.clearfix
 			include component/footer.jade
 			a.back-to-top.ripple(href="#") TOP
-	script(src='js/lightbox.js')
-	script.
-		lightbox.option({
-			'fadeDuration': 300,
-			'resizeDuration': 300
-		});
