--- a/jade/project.jade
+++ b/jade/project.jade
@@ -170,12 +170,12 @@ html.no-js
 						#particles-js
 						a.prev-underline.back-panel.event-back(href="javascript: history.go(-1)")
 							i.fa.fa-angle-left(aria-hidden="true")
-							span Back To Event
+							span Back To Projects
 						.event-des
-							p.index-title.small-title STRANDED IN PARADISE CONCERT 2016
-							p.padding-column Every February, artists from all over the world travel to the island of Oahu for POW! WOW! Hawaii, an art and music festival that takes place in the Kaka’ako district of Honolulu. Heading into the 6th year in Hawaii and after a worldwide tour of festivals, the 2016 edition was even bigger and better. With over a hundred artists, musicians, photographers and media partners from across the globe attending and forming a unique creative community built on the celebration and appreciation of art, music and culture.<br><br>For the first time at the festival, POW! WOW! presented “Stranded in Paradise”. A concert with The Green and DJ Babu and Rakaa Iriscience of Dilated Peoples at Makers and Tasters in Kaka’ako, Hawaii. The event also featured the Secret Walls street art battles, the best food trucks, retail booths and more.
-						p.index-title.small-title Timeline
-						#timeline.timeline-container
+							p.index-title.small-title RVCA X POW! WOW!: THE POD EXHIBITION
+							p.padding-column On February 13th, 2015 POW! WOW! and RVCA held an exhibition at the Modern Honolulu, curated by PM Tenore. The visitors had a chance to see the collection of surfboards that surfing superstar Kelly Slater and RVCA artist Kevin Ancell collaborated on.<br><br>This idea initially came into focus after watching the movie Blackfish and seeing the wild captures, captive breeding and sad life of majestic Orcas in marine mammal parks. The whole experience inspired Slater to paint his boards to mimic Orcas markings and help raise awareness about the issue through it. After discussing this idea with Ancell they came up with an idea to paint the boards using tags, and in particular the infamous DFW tag. The boards created through this project are used as plaques to honor the people and whales that are affected with this issue and inspire others to join the #FreeTheFuckingWhales initiative.
+						//- p.index-title.small-title Timeline
+						//- #timeline.timeline-container
 							.timeline-wrapper
 								h2.timeline-time 2016 Feb 28 
 								dl.timeline-series
