--- a/css/styles.css
+++ b/css/styles.css
@@ -422,6 +422,9 @@ th {
   padding-left: 0.9375em;
   padding-right: 0.9375em; }
 
+.menu-divider {
+  height: 80px; }
+
 .zoomicon {
   cursor: zoom-in; }
 
@@ -812,7 +815,6 @@ body {
       display: block;
       overflow: hidden;
       width: 100%;
-      height: 100%;
       border: 3px solid #333;
       position: relative; }
       .artists-content-block .index-artist-block a:before {
@@ -1620,6 +1622,31 @@ body {
       .powwow-history .pow-section .personnel p {
         margin-bottom: 0; }
 
+.interview-question, .interview-answer {
+  font-size: 1.25em;
+  position: relative;
+  width: 100%;
+  text-indent: 60px;
+  margin-bottom: 30px;
+  font-weight: bold; }
+  .interview-question:before, .interview-answer:before {
+    content: 'Q:';
+    display: block;
+    font-size: 2.125em;
+    position: absolute;
+    font-weight: bold;
+    left: -60px;
+    top: -30px;
+    color: #cb4040; }
+
+.interview-answer {
+  font-weight: normal;
+  margin-bottom: 60px; }
+  .interview-answer:before {
+    content: 'A:';
+    top: -25px;
+    color: #333; }
+
 button:focus {
   outline: none; }
 
@@ -1984,6 +2011,8 @@ textarea {
   text-align: right;
   max-width: 70px;
   font-size: 1em; }
+  .lang-select-box .cs-placeholder {
+    padding: 0.5em 3em 0.5em 0.5em; }
 
 div.cs-select {
   display: inline-block;
@@ -2011,16 +2040,12 @@ div.cs-select:focus {
   display: block;
   position: relative;
   cursor: pointer;
-  padding: 1em;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
   font-size: 0.75em; }
 
 /* Placeholder and selected option */
-.cs-select > span {
-  padding-right: 3em; }
-
 .cs-select > span::after,
 .cs-select .cs-selected span::after {
   speak: none;
@@ -2086,7 +2111,6 @@ div.cs-skin-underline {
     font-size: 1.2em; } }
 
 .cs-skin-underline > span {
-  padding: 0.5em 3em 0.5em 0.5em;
   border-bottom: 1px solid #fff;
   border-color: inherit;
   color: white; }
