--- a/jade/component/footer.jade
+++ b/jade/component/footer.jade
@@ -7,9 +7,10 @@
 				p POW! WOW! TAIWAN!
 		.medium-6.small-12.columns.footer-nav-block
 			.footer-nav
-				- var list = [{ name : 'Home', data : 'index.html'}, { name : 'Murals', data : 'mural-list.html' },{ name : 'Festivals', data : 'festival-list.html' },{ name : 'Participants', data : 'participants.html'}, { name : 'Location', data : 'location.html' },{ name : 'About', data : '#' }]
+				- var list = [{ name : 'Home', data : 'index.html'}, { name : 'Murals', data : 'mural-list.html' },{ name : 'Festivals', data : 'festival-list.html' },{ name : 'Participants', data : 'participants.html'}, { name : 'Video', data : 'video-list.html' }, { name : 'Projects', data : 'project-list.html' }, { name : 'Education', data : 'location.html' }, { name : 'About', data : 'about.html' }]
 						each item in list
 							div: a(href=item.data).linkFade=item.name
+						div: a(href='http://shop.powwowhawaii.com/', target='_blank') Shop
 			//- .footer-nav
 			//- 	- var list = []
 			//- 			each item in list
