--- a/scss/module/_select.scss
+++ b/scss/module/_select.scss
@@ -13,6 +13,9 @@
 	text-align: right;
 	max-width: 70px;
 	font-size: 1em;
+	.cs-placeholder {
+		padding: 0.5em 3em 0.5em 0.5em;
+	}
 }
 
 div.cs-select {
@@ -44,7 +47,7 @@ div.cs-select:focus {
 	display: block;
 	position: relative;
 	cursor: pointer;
-	padding: 1em;
+	// padding: 1em;
 	white-space: nowrap;
 	overflow: hidden;
 	text-overflow: ellipsis;
@@ -53,7 +56,7 @@ div.cs-select:focus {
 
 /* Placeholder and selected option */
 .cs-select > span {
-	padding-right: 3em;
+	// padding-right: 3em;
 }
 
 .cs-select > span::after,
@@ -135,7 +138,7 @@ div.cs-skin-underline {
 }
 
 .cs-skin-underline > span {
-	padding: 0.5em 3em 0.5em 0.5em;
+	// padding: 0.5em 3em 0.5em 0.5em;
 	border-bottom: 1px solid #fff;
 	border-color: inherit;
 	color: white;
