--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -13,6 +13,7 @@
 @import "layout/artist";
 @import "layout/events";
 @import "layout/about";
+@import "layout/interview";
 
 @import "module/button";
 @import "module/textfield";
