--- a/jade/interview-list.jade
+++ b/jade/interview-list.jade
@@ -160,7 +160,7 @@ html.no-js
 					.parallax
 						img(src='img/banner1.jpg')
 					.banner-slogan
-						p.page-slogan interview
+						p.page-slogan Mess-Age x POW! WOW! Taiwan
 						p.page-sub-slogan hear what these artists have to say
 						.banner-button.arrow-down: a#contentlink(href="#") SEE INTERVIEWS
 				a#content(href="#")
