--- a/jade/education-list.jade
+++ b/jade/education-list.jade
@@ -26,12 +26,16 @@ html.no-js
 		script(src='js/classie.js')
 		script(src='js/selectFx.js')
 		script(src="http://cdnjs.cloudflare.com/ajax/libs/modernizr/2.0.6/modernizr.min.js")
+		script(src='js/barba.min.js')
+		script(src='js/jquery.grid-a-licious.js')
 		script(src='js/materialize.js')
+		script(src='js/stick.js')
 		script(src='https://cdn.jsdelivr.net/scrollreveal.js/3.3.1/scrollreveal.min.js')
 		link(rel='stylesheet', href='font/aller.css')
 		link(rel='stylesheet', href='css/flexslider.css')
-		link(rel='stylesheet', href='css/foundation.css')
 		link(rel='stylesheet', href='css/materialize.css')
+		link(rel='stylesheet', href='css/foundation.css')
+		link(rel='stylesheet', href='css/font-awesome.css')
 		link(rel='stylesheet', href='css/styles.css')
 		link(href='https://fonts.googleapis.com/css?family=Ubuntu:400,700,300', rel='stylesheet', type='text/css')
 		script.
@@ -44,6 +48,7 @@ html.no-js
 			function redirectPage() {
 				window.location = linkLocation;
 			}
+
 			$(window).load(function(){
 				$('.loader').fadeOut(500);
 				$('.loader-bg').fadeOut(1000);
@@ -121,12 +126,12 @@ html.no-js
 				$('.index-block').each(function(){
 					$(this).find('.index-artist-block').last().addClass('end');
 				});
-				$('.pin').hover(function(){
-					$('.pin').not(this).css('opacity', '0.4');
+				$('.item').hover(function(){
+					$('.item').not(this).css('opacity', '0.4');
 				}, function(){
-					$('.pin').not(this).css('opacity', '1');
+					$('.item').not(this).css('opacity', '1');
 				});
-				
+
 				
 				$("#contentlink").click(function(e) { 
 					e.preventDefault(); 
@@ -135,7 +140,22 @@ html.no-js
 				$('.parallax').parallax();
 				[].slice.call( document.querySelectorAll( 'select.cs-select' ) ).forEach( function(el){	
 					new SelectFx(el);
-				});    
+				});     
+				
+				//- $('.pin-block').waterfall();
+				//- $('.mural-container').gridalicious({
+				//- 	selector: '.item',
+				//- 	animate: true,
+				//- 	width: 400
+				//- });
+				$('.sticky-header').stick_in_parent({
+					offset_top: 50
+				});
+				$('.panel-column a').click(function(){
+					$('html,body').animate({
+						scrollTop: $("#content").offset().top - 50},
+					'slow');
+				});
 				var config = {
 					viewFactor: 0.15,
 					duration: 800,
@@ -143,8 +163,8 @@ html.no-js
 					scale: 0.8
 				}
 				window.sr = ScrollReveal(config);
-				sr.reveal('.revealer'); 
-				
+				sr.reveal('.panel-column');
+
 				
 			});
 	body
@@ -159,25 +179,50 @@ html.no-js
 				.parallax-container
 					.parallax
 						img(src='img/banner1.jpg')
+						.pattern-hack
 					.banner-slogan
-						p.page-slogan POW! WOW! EDUCATION
-						p.page-sub-slogan learn from the best of pow! wow!
-						.banner-button.arrow-down: a#contentlink(href="#") SEE EDUCATIONS
+						p.page-slogan projects
+						p.page-sub-slogan see all the other projects and events around the world
+						.banner-button.arrow-down: a#contentlink(href="#") SEE PROJECTS
 				a#content(href="#")
-				.index-block.index-mural.padding-top-120.padding-column
-					.artists-content-block
-						.row
-							- var list = [{ name : "alexface", data : "graffiti artist" },{ name : "caratoes", data : "graffiti artist" },{ name : "colasa", data : "music artist"},{ name : "debe", data : "music artist"},{ name : "girenhao", data : "graffiti artist"}, { name : "horton", data : "graffiti artist"},{ name : "nychos", data : "graffiti artist"}]
+				.index-block.index-mural.padding-top-120.padding-column#barba-wrapper
+					.filter-wrap
+						.filter-outer-box
+							span.filter-label Filter
+							.filter-box
+								select.cs-select.filter-select.cs-skin-underline
+									option(selected, disabled) Choose Filter
+									option(value="none") None
+									option(value="2016") 2016
+									option(calue="2015") 2015
+									option(value="2014") 2014
+									option(value="2013") 2013
+									option(value="2012") 2012
+									option(value="2011") 2011
+									option(value="2010") 2010
+									
+						.filter-outer-box
+							span.filter-label Arrange
+							.arrange-box
+								select.cs-select.filter-select.cs-skin-underline
+									option(selected, disabled) Choose Filter
+									option(value="newest") Newest
+									option(value="oldest") Oldest
+									option(value="az") A-Z
+									option(value="za") Z-A
+						.filter-submit 
+							button APPLY
+					.barba-container
+						.mural-panel.row
+							- var list = [{ name : "POW! WOW! SCHOOL OF ART", data : "http://powwowhawaii.com/wp-content/uploads/2013/02/pw_ed_01-260x172.jpg", site : "education-art.html"},{ name : "POW! WOW! SCHOOL OF MUSIC", data : "http://powwowhawaii.com/wp-content/uploads/2013/04/pw_musicschool_01-260x172.jpg", site : "education-music.html"},{ name : "ART AND MUSIC DISCUSSION PANELS", data : "http://powwowhawaii.com/wp-content/uploads/2013/02/pw_panels_01-260x172.jpg", site : "education-discussion.html"}]
 								each item in list
-									.medium-4.small-12.columns.index-artist-block.revealer.safari_only
-										a.linkFade(href="artist.html")
+									.medium-4.small-12.columns.panel-column.end.safari_only
+										a(href=""+item.site).linkFade
 											.ratio-hack
-												div.i-artist-thumb(style="background-image: url(img/"+item.name+"_thumb.jpg);")
+												div.i-artist-thumb(style="background-image: url("+item.data+");")
 													.i-artist-overlay
 													.artist-name-cat
 														p=item.name
-														p.underline
-														p=item.data
-						.clearfix
 			include component/footer.jade
 			a.back-to-top.ripple(href="#") TOP
+		script.
