--- a/jade/education-music.jade
+++ b/jade/education-music.jade
@@ -61,7 +61,20 @@ html.no-js
 			    });
 				$(document).foundation();
 				
-				
+				$('.lines-button').click(function(e) {
+					e.preventDefault();
+					$('.lines-button').toggleClass('close');
+					var open = $('.screen-menu').hasClass('sm-overlay-open');
+					if(open) {
+						$('.screen-menu').removeClass('sm-overlay-open');
+						$('body').css({'overflow-y': 'auto'});
+						$('.header').find('.menu-button').show();
+					} else {
+						$('.screen-menu').addClass('sm-overlay-open');
+						$('body').css({'overflow-y': 'hidden'});
+						$('.header').find('.menu-button').hide();
+					}
+				});
 				[].slice.call( document.querySelectorAll( 'select.cs-select' ) ).forEach( function(el){	
 					new SelectFx(el);
 				}); 
@@ -132,26 +145,12 @@ html.no-js
 				.content.padding-column.p-bottom-50
 					a.prev-underline.back-panel.event-back(href="javascript: history.go(-1)")
 							i.fa.fa-angle-left(aria-hidden="true")
-							span Back To Interview
+							span Back To Education
 					.menu-divider
-					p.about-title.small-title.revealer pPOW! WOW! SCHOOL OF ART
+					p.about-title.small-title.revealer POW! WOW! SCHOOL OF MUSIC
 					.powwow-history
 						.pow-section.revealer 
-							p.interview-question You lived between New Zealand and Cambodia, how did that impact your creative process?
-							p.interview-answer Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-							p.interview-question What would you tell your 10 year old self? 
-							p.interview-answer Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-							p.interview-question What is something that you would never want to draw or paint?
-							p.interview-answer Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-							p.interview-question Who would you like to meet (dead or alive) and what would you ask this person? Why? 
-							p.interview-answer Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-							p.interview-question What is next for you, as an artist? If you could change anything in the world right now, what would it be?
-							p.interview-answer Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-							p.interview-question How do you define Street Art? 
-							p.interview-answer Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-							p.interview-question What is the future of street art / graffiti and where do you fit in? How would you prefer it to be? 
-							p.interview-answer Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-							p.interview-question Say something to the young blood who want to making street art as well?
-							p.interview-answer Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+							p Partnering with Flexfit, the POW! WOW! SCHOOL OF MUSIC is a special program focused on music education for our community’s youth. POW! WOW! SCHOOL OF MUSIC will provide unique learning opportunities for a select group of local musicians between the ages of 13-18. These young musicians will be able to participate in classes on composition, vocals, percussion, guitar, ukulele, keyboard, bass, recording, performance and the music business with local and national musicians, teachers and music industry professionals. The students will also have the opportunity to collaborate with each other and create original music and perform at POW WOW Hawaii’s closing night festivities. For more info, go to 
+								a(href='http://www.pwsom.com/', target='_blank') www.pwsom.com.
 			include component/footer.jade
 			a.back-to-top.ripple(href="#") TOP
