--- a/scss/layout/_index.scss
+++ b/scss/layout/_index.scss
@@ -102,6 +102,9 @@
 }	
 .index-result {
 	margin-top: 20px;
+	width: 48%;
+	display: inline-block;
+	vertical-align: top;
 }
 .brand-block {
 	padding-bottom: 50px;
